--- a/moving.css
+++ b/moving.css
@@ -6,13 +6,13 @@
 }
 
 .mask_layer{
-  width: 50%;
-  height: 80%;
-  background: blue;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0);
   position: fixed;
-  left: 0;
-  top: 0;
-  opacity: 0.8;
+  left:0px;
+  top:0px;
+  /*opacity: 0.8;*/
 }
 .drag{
   background: red;
@@ -21,4 +21,18 @@
   position: absolute;
   left:30px;
   top:30px;
+  cursor: move;
+}
+.drag p{
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  background: blue;
+  width: 80px;
+  height: 80px;
+  line-height: 80px;
+  text-align: center;
+  font-size: 18px;
+  color: #FFF;
+  text-transform: uppercase;
 }
