--- a/moving.css
+++ b/moving.css
@@ -22,6 +22,7 @@
   left:30px;
   top:30px;
   cursor: move;
+  -webkit-user-select:none;
 }
 .drag p{
   position: absolute;
@@ -35,4 +36,10 @@
   font-size: 18px;
   color: #FFF;
   text-transform: uppercase;
+}
+.dot{
+  width: 5px;
+  height: 5px;
+  background: #333;
+  position: absolute;
 }
